Basic refactoring to bring code up to java 17 language specifications (where confident it is safe)